Force apply the java args